src/qt/res/css/default.css
WalletFrame {
    border-image: url(':/images/default/walletFrame_bg') 0 0 0 0 stretch stretch;
    border-top:0px solid #000;
    margin:0;
    padding-top: 20px;
    padding-bottom: 20px;
}
    
QStatusBar {
    background-color: #ffffff;
}
    
.QFrame {
    background-color:transparent;
    border:0px solid #ffffff;
}
    
QMenuBar {
	background-color: #ffffff;
}

QMenuBar::item {
	background-color: #ffffff;
}
    
QMenuBar::item:selected {
	background-color: #F8F6F6;
}
    
QMenu {
	background-color: #F8F6F6;
}
    
QMenu::item {
	color: #333;
}
    
QMenu::item:selected {
	background-color: #F2F0F0;
	color: #333;
}
    
QToolBar {
    background-color: #ffffff;
    border: 0px solid #000;
    padding: 0;
    margin: 0;
}
    
QToolBar > QToolButton {
    background-color: #ffffff;
    border:0px solid #333;
    min-height: 2.5em;
    min-width: 8em;
    padding: 0em 1em;
    /*font-weight:bold;*/
    color: #333;
}
    
QToolBar > QToolButton:checked {
    background-color: #1C75BC;
    color: #ffffff;
    font-weight: bold;
}
    
QMessageBox {
    background-color: #F8F6F6;
}
    
/*******************************************************/
    
    QLabel { /* Base Text Size & Color */
    font-size:12px;
    color:#333333;
    }
    
    .QCheckBox { /* Checkbox Labels */
    color:#333333;
    background-color:transparent;
    }
    
    .QCheckBox:hover {
    background-color:transparent;
    }
    
    .QValidatedLineEdit, .QLineEdit { /* Text Entry Fields */
    border: 1px solid #82C3E6;
    font-size:11px;
    min-height:25px;
    outline:0;
    padding:3px;
    background-color:#fcfcfc;
    }
    
    .QLineEdit:!focus {
    font-size:12px;
    }
    
    .QValidatedLineEdit:disabled, .QLineEdit:disabled {
    background-color:#f2f2f2;
    }
    
    /*******************************************************/
    
    QPushButton { /* Global Button Style */
    background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #4ca5dc, stop: .1 #2c85cc, stop: .95 #2c85cc, stop: 1 #1D80B5);
    border:0;
    border-radius: 3px;
    color:#ffffff;
    font-size: 12px;
    font-weight:normal;
    height: 26px;
    padding-left: 25px;
    padding-right: 25px;
    padding-top: 5px;
    padding-bottom: 5px;
    margin-right: 10px;
    }
    
    QPushButton:hover {
    background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #4ca5dc, stop: .1 #4ca5dc, stop: .95 #4ca5dc, stop: 1 #1D80B5);
    }
    
    QPushButton:focus {
    border:none;
    outline:none;
    }
    
    QPushButton:pressed {
    border:1px solid #333;
    }
    
    QComboBox { /* Dropdown Menus */
    border:1px solid #82C3E6;
    padding: 3px 5px 3px 5px;
    background:#fcfcfc;
    min-height:25px;
    color:#818181;
    }
    
    QComboBox:checked {
    background:#f2f2f2;
    }
    
    QComboBox:editable {
    background: #1c75bc;
    color:#616161;
    border:0px solid transparent;
    }
    
    QComboBox::drop-down {
    width:25px;
    border:0px;
    }
    
    QComboBox::down-arrow {
    border-image: url(':/images/default/downArrow') 0 0 0 0 stretch stretch;
    }
    
    QComboBox QListView {
    background:#fff;
    border:1px solid #333;
    padding-right:1px;
    padding-left:1px;
    }
    
    QComboBox QAbstractItemView::item { margin:4px; }
    
    QComboBox::item {
    color:#818181;
    }
    
    QComboBox::item:alternate {
    background:#fff;
    }
    
    QComboBox::item:selected {
    border:0px solid transparent;
    background:#f2f2f2;
    }
    
    QComboBox::indicator {
    background-color:transparent;
    selection-background-color:transparent;
    color:transparent;
    selection-color:transparent;
    }
    
    QAbstractSpinBox {
    border:1px solid #82C3E6;
    padding: 3px 5px 3px 5px;
    background:#fcfcfc;
    min-height:25px;
    color:#818181;
    }
    
    QAbstractSpinBox::up-button {
    subcontrol-origin: border;
    subcontrol-position: top right;
    width:21px;
    background:#fcfcfc;
    border-left:0px;
    border-right:1px solid #82C3E6;
    border-top:1px solid #82C3E6;
    border-bottom:0px;
    padding-right:1px;
    padding-left:5px;
    padding-top:2px;
    }
    
    QAbstractSpinBox::up-arrow {
    image:url(':/images/default/upArrow_small');
    }
    
    QAbstractSpinBox::down-button {
    subcontrol-origin: border;
    subcontrol-position: bottom right;
    width:21px;
    background:#fcfcfc;
    border-top:0px;
    border-left:0px;
    border-right:1px solid #82C3E6;
    border-bottom:1px solid #82C3E6;
    padding-right:1px;
    padding-left:5px;
    padding-bottom:2px;
    }
    
    QAbstractSpinBox::down-arrow {
    image:url(':/images/default/downArrow_small');
    }
    
    QCheckBox {
    spacing: 5px;
    }
    
    QCheckBox::indicator {
    width: 16px;
    height: 16px;
    }
    
    QCheckBox::indicator:unchecked {
    image:url(':/images/default/unchecked');
    }
    
    QCheckBox::indicator:unchecked:hover {
    image:url(':/images/default/unchecked');
    }
    
    QCheckBox::indicator:unchecked:pressed {
    image:url(':/images/default/checked');
    }
    
    QCheckBox::indicator:checked {
    image:url(':/images/default/checked');
    }
    
    QCheckBox::indicator:checked:hover {
    image:url(':/images/default/checked');
    }
    
    QCheckBox::indicator:checked:pressed {
    image:url(':/images/default/unchecked');
    }
    
    QCheckBox::indicator:indeterminate:hover {
    image:url(':/images/default/unchecked');
    }
    
    QCheckBox::indicator:indeterminate:pressed {
    image:url(':/images/default/checked');
    }
    
    /*******************************************************/
    
    QHeaderView { /* Table Header */
    background-color:transparent;
    }
/* ... */

